again fixed filter alignment

--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ img{
     margin-top: 10px;
   }
 
-  .navbar{
+  /* .navbar{
     flex-wrap:nowrap;
-  }
+  } */
 }
